--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,10 +25,19 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
 
+
+    //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.6.2'
     implementation 'com.squareup.retrofit2:converter-gson:2.6.2'
 
+    //Material EditText
+    implementation 'com.github.florent37:materialtextfield:1.0.7'
 
+    //Cardview
+    implementation 'com.android.support:cardview-v7:29.3.1'
+
+    //Lottie
+    implementation 'com.airbnb.android:lottie:3.4.0'
 
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
